--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
+<% if(locals.footer){ %> 
 <footer class="footer">
     <div class="footer-middle">
         <div class="container mt-5">
@@ -74,3 +75,5 @@
         </div><!-- End .container -->
     </div><!-- End .footer-bottom -->
 </footer><!-- End .footer -->
+
+<% } %> 
