--- a/views/admin/edit-category.ejs
+++ b/views/admin/edit-category.ejs
@@ -2,7 +2,7 @@
     <div class="card">
         <div class="card-body">
             <h4 class="card-title">Edit Category</h4>
-            <form action="/admin/edit-category/<%=category._id%>" method="post">
+            <form>
                 <p id="err" class="text-danger"></p>
                 <div class="form-group">
                     <label>Category</label>
@@ -10,7 +10,7 @@
                         aria-label="Username" name="name" id="value" value="<%=category.name%>">
                 </div>
                 <button type="button" onclick="validation()" class="btn btn-primary ml-3 mr-2 col-md-2">Submit</button>
-                <button class="btn btn-light">Cancel</button>
+                <button  type="button" onclick="window.location.href ='http://localhost:3000/admin/category'" class="btn btn-light">Cancel</button>
             </form>
         </div>
     </div>
