--- a/views/admin/edit-products.ejs
+++ b/views/admin/edit-products.ejs
@@ -6,12 +6,14 @@
 
             <br>
 
-            <form class="forms-sample" method="post" action="/admin/edit-products/<%= products._id  %> " enctype="multipart/form-data">
+            <form class="forms-sample" method="post" action="/admin/edit-products/<%= products._id  %> "
+                enctype="multipart/form-data">
 
                 <div class="row">
                     <div class="form-group col-md-5">
                         <label for="exampleInputName1">Name</label>
-                        <input type="text" class="form-control" id="exampleInputName1" placeholder="name" name="name" value="<%= products.name  %>">
+                        <input type="text" class="form-control" id="exampleInputName1" placeholder="name" name="name"
+                            value="<%= products.name  %>">
                     </div>
 
                     <div class="form-group col-md-5">
@@ -23,29 +25,55 @@
 
                     <div class="form-group col-md-5">
                         <label for="exampleSelectGender">Category</label>
-                        <select class="form-control"   name="category">
+                        <select class="form-control" name="category">
                             <% category.forEach((categoryn)=>{ %>
-                                <option class="text-dark"><%-categoryn.name%></option>
-                                <% }) %> 
+                                <option class="text-dark">
+                                    <%-categoryn.name%>
+                                </option>
+                                <% }) %>
                         </select>
                     </div>
 
-                    
+
                     <div class="form-group col-md-5">
                         <label for="exampleInputPassword4">Quantity</label>
                         <input type="text" class="form-control" id="exampleInputPassword4" placeholder="quantity"
-                            name="quantity" value="<%= products.quantity %>" >
+                            name="quantity" value="<%= products.quantity %>">
                     </div>
 
 
                     <div class="form-group col-md-10">
                         <label for="exampleTextarea1">Description</label>
-                        <textarea class="form-control" id="exampleTextarea1" rows="5" name="description"><%= products.description%></textarea>
+                        <textarea class="form-control" id="exampleTextarea1" rows="5"
+                            name="description"><%= products.description%></textarea>
                     </div>
 
-                    <div class="form-group col-md-10">
-                        <label for="">Image</label>
-                        <input type="file" name="image" class="form-control">
+                    <div class="form-group col-md-5">
+                        <img src="/product-images/<%- products._id %>.jpg" alt="" style="width: 75px; height: 75px;"
+                            id="imgView">
+                        <label for="image">Image</label>
+                        <input type="file" name="image" class="form-control" onchange="viewImage(event)">
+                    </div>
+
+                    <div class="form-group col-md-5">
+                        <img src="/product-images/<%- products._id %>.jpg" alt="" style="width: 75px; height: 75px;"
+                            id="imgView">
+                        <label for="image">Image</label>
+                        <input type="file" name="image" class="form-control" onchange="viewImage(event)">
+                    </div>
+
+                    <div class="form-group col-md-5">
+                        <img src="/product-images/<%- products._id %>.jpg" alt="" style="width: 75px; height: 75px;"
+                            id="imgView">
+                        <label for="image">Image</label>
+                        <input type="file" name="image" class="form-control" onchange="viewImage(event)">
+                    </div>
+
+                    <div class="form-group col-md-5">
+                        <img src="/product-images/<%- products._id %>.jpg" alt="" style="width: 75px; height: 75px;"
+                            id="imgView">
+                        <label for="image">Image</label>
+                        <input type="file" name="image" class="form-control" onchange="viewImage(event)">
                     </div>
 
 
@@ -56,3 +84,13 @@
         </div>
     </div>
 </div>
+
+
+
+<script>
+
+function viewImage(event){
+    document.getElementById('imgView').src=URL.createObjectURL(event.target.files[0])
+}
+
+</script>
