--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -32,6 +32,7 @@
             </div><!-- End .toolbox -->
 
             <div class="products">
+                <div id="snackbar">Product added to cart..</div>
                 <div class="row">
 
                     <% products.forEach((products,index)=>{ %>
@@ -39,8 +40,8 @@
                             <div class="product">
                                 <figure class="product-media">
                                     <span class="product-label label-sale">30% off</span>
-                                    <a href="/product/<%- products._id %> ">
-                                        <img src="/product-images/<%- products._id %>.jpg " alt="Product image"
+                                    <a href="/product/<%- products._id%> ">
+                                        <img src="/product-images/<%- products._id %>0.jpg " alt="Product image"
                                             class="product-image">
                                     </a>
 
@@ -50,7 +51,9 @@
                                     </div><!-- End .product-action -->
 
                                     <div class="product-action action-icon-top">
-                                        <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
+                                        <button onclick="addToCart('<%-products._id%>')"
+                                            class="btn-product btn-cart border-0"><span>
+                                                add to cart</span></button>
                                     </div><!-- End .product-action -->
                                 </figure><!-- End .product-media -->
 
@@ -346,3 +349,32 @@
         </div><!-- End .container -->
     </div><!-- End .page-content -->
 </main><!-- End .main -->
+
+
+
+
+
+<script>
+
+
+    function addToCart(proId) {
+        $.ajax({
+            url: '/add-to-cart/' + proId,
+            method: 'get',
+            success: (response) => {
+                if (response.status) {
+                    let count = $('#cart-count').html()
+                    count = parseInt(count) + 1
+                    $('#cart-count').html(count)
+
+
+                    var snackbar = document.getElementById("snackbar");
+                    snackbar.className = "show";
+                    setTimeout(function () { snackbar.className = snackbar.className.replace("show", ""); }, 3000);
+                }
+            }
+        })
+    }
+
+
+</script>
