--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -19,7 +19,7 @@
                             aria-labelledby="register-tab-2">
 
 
-                            <form action="/signup" method="post">
+                            <form >
                                 <p id="existError" class="text-danger"></p>
                                 <div class="row">
                                     <div class="form-group col-md-6">
