--- a/views/partials/header-main.ejs
+++ b/views/partials/header-main.ejs
@@ -51,8 +51,8 @@
                         <i class="icon-bars"></i>
                     </button>
 
-                    <a href="index.html" class="logo">
-                        <img src="images/logo.png" alt="Molla Logo" width="105" height="25">
+                    <a href="/" class="logo">
+                        <img src="/images/logo.png" alt="RIG-X-" width="105" height="25">
                     </a>
 
                     <nav class="main-nav">
