--- a/views/admin/edit-products.ejs
+++ b/views/admin/edit-products.ejs
@@ -17,13 +17,6 @@
                     </div>
 
                     <div class="form-group col-md-5">
-                        <label for="exampleInputPassword4">Price</label>
-                        <input type="text" class="form-control" id="exampleInputPassword4" placeholder="Price"
-                            name="price" value="<%= products.price  %>">
-                    </div>
-
-
-                    <div class="form-group col-md-5">
                         <label for="exampleSelectGender">Category</label>
                         <select class="form-control" name="category">
                             <% category.forEach((categoryn)=>{ %>
@@ -34,6 +27,17 @@
                         </select>
                     </div>
 
+                    <div class="form-group col-md-5">
+                        <label for="exampleInputPassword4">Price</label>
+                        <input type="text" class="form-control" id="exampleInputPassword4" placeholder="Price"
+                            name="price" value="<%= products.price  %>">
+                    </div>
+
+                    <div class="form-group col-md-5">
+                        <label for="exampleInputPassword4">Market Price</label>
+                        <input type="text" class="form-control" id="exampleInputPassword4" placeholder="Market Price"
+                            name="marketPrice" value="<%= products.marketPrice  %>">
+                    </div>
 
                     <div class="form-group col-md-5">
                         <label for="exampleInputPassword4">Quantity</label>
