--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -351,7 +351,7 @@
         let data = response[0].address
 
         inputId.forEach(e=>{
-          console.log(data[e]);
+          // console.log(data[e]);
           document.getElementById(e).value = data[e]
         })
 
