--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -67,8 +67,8 @@
                                             <%- products.name %>
                                         </a></h3><!-- End .product-title -->
                                     <div class="product-price">
-                                        <span class="new-price">₹<%- products.price %> </span>
-                                        <span class="old-price">$84.00</span>
+                                        <strike class="text-danger"><span class="new-price">₹<%- products.marketPrice %></span></strike>
+                                        <span class="old-price">₹<%- products.price %></span>
                                     </div><!-- End .product-price -->
                                     <div class="ratings-container">
                                         <div class="ratings">
