--- a/views/user/single-product.ejs
+++ b/views/user/single-product.ejs
@@ -70,10 +70,10 @@
 
                             <div class="product-details-action">
                                 <div class="details-action-col">
-                                    <div class="product-details-quantity">
+                                    <!-- <div class="product-details-quantity">
                                         <input type="number" id="qty" class="form-control" value="1" min="1" max="10"
                                             step="1" data-decimals="0" required>
-                                    </div><!-- End .product-details-quantity -->
+                                    </div>End .product-details-quantity -->
 
                                     <button onclick="addToCart('<%-product._id%>')"
                                         class="btn-product btn-cart"><span>add to cart</span></button>
